# LinguaLAN

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
electron-version/: README.md  index.html  main.js  package-lock.json  package.json  popup.html  popup.js  preload.js  renderer.js  style.css
src/: index.html  popup.html  popup.js  renderer.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
